<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/male"
        android:layout_width="0dp"
        android:layout_height="@dimen/common_card_view_height"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="@dimen/common_card_view_radius_default"
        app:layout_constraintEnd_toStartOf="@id/female"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgMale"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/img_description"
                android:src="@drawable/ic_male"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/female"
        android:layout_width="0dp"
        android:layout_height="@dimen/common_card_view_height"
        android:layout_marginStart="@dimen/common_margin_default"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="@dimen/common_card_view_radius_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/male"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgFemale"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/img_description"
                android:src="@drawable/ic_female"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewHeight"
        android:layout_width="0dp"
        android:layout_height="@dimen/common_card_view_height"
        android:layout_marginTop="@dimen/common_margin_max"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="@dimen/common_card_view_radius_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/female">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvHeightText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margin_default"
                android:text="@string/height"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvHeightNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="100"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold" />

            <com.google.android.material.slider.Slider
                android:id="@+id/sliderHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_margin_default"
                android:layout_marginEnd="@dimen/common_margin_default"
                android:stepSize="1"
                android:valueFrom="120"
                android:valueTo="200" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewWeight"
        android:layout_width="0dp"
        android:layout_height="@dimen/common_card_view_height"
        android:layout_marginTop="@dimen/common_margin_max"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="@dimen/common_card_view_radius_default"
        app:layout_constraintEnd_toStartOf="@id/cardViewAge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewHeight">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvWeightText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margin_default"
                android:text="@string/weight"
                android:textAllCaps="true"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvWeightText"
                tools:text="60" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnSubtractWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/background_fab"
                android:contentDescription="@string/common_description"
                android:src="@drawable/ic_subtract"
                app:layout_constraintEnd_toStartOf="@id/btnPlusWeight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvWeight"
                app:tint="@color/white" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnPlusWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img_description"
                android:backgroundTint="@color/background_fab"
                android:src="@drawable/ic_plus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnSubtractWeight"
                app:layout_constraintTop_toBottomOf="@id/tvWeight"
                app:tint="@color/white"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewAge"
        android:layout_width="0dp"
        android:layout_height="@dimen/common_card_view_height"
        android:layout_marginStart="@dimen/common_margin_default"
        android:layout_marginTop="@dimen/common_margin_max"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="@dimen/common_card_view_radius_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cardViewWeight"
        app:layout_constraintTop_toBottomOf="@id/cardViewHeight">

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCalculate"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>